# opentelemetry-playground

./: .gitignore  docker-compose.yaml
app/: pyproject.toml
app/app/: main.py  setup.py  telemetry.py
signoz/common/locust-scripts/: locustfile.py
