[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mani Mozaffar <mani.mozaffar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-exporter-otlp-proto-http = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
